[iOS] Detect freeze in main run loop.

This CL adds a watchdog to check the main thread
responsiveness by posting regular tasks to the main
thread and check their execution.

If the main thread is not responsive for too long,
a "crash" report will be generated and sent on next
startup.
A NSUserDefault will also be set to allow reporting
the freeze on next startup.

Bug: 910024
Change-Id: I541b27c993b90e0982227cbe4238a338938d760f
Reviewed-on: https://chromium-review.googlesource.com/c/1350958
Commit-Queue: Olivier Robin <olivierrobin@chromium.org>
Reviewed-by: Brian White <bcwhite@chromium.org>
Reviewed-by: Peter Lee <pkl@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612111}
Former-commit-id: ce9386ebd62a74afbe15f0fd0f0c10751b14169f