ios/chrome/browser/ios_chrome_flag_descriptions.cc
@@ -209,6 +209,11 @@ const char kCopyImageName[] = "Copy Image";
 const char kCopyImageDescription[] =
     "Enable copying image to system pasteboard via context menu.";
 
+const char kDetectMainThreadFreezeName[] = "Detect freeze in the main thread.";
+const char kDetectMainThreadFreezeDescription[] =
+    "A crash report will be uploaded if the main thread is frozen more than "
+    "the time specified by this flag.";
+
 const char kDragAndDropName[] = "Drag and Drop";
 const char kDragAndDropDescription[] = "Enable support for drag and drop.";
 
