ios/chrome/browser/metrics/mobile_session_shutdown_metrics_provider.h
@@ -23,6 +23,7 @@ enum MobileSessionShutdownType {
   SHUTDOWN_IN_FOREGROUND_NO_CRASH_LOG_WITH_MEMORY_WARNING,
   SHUTDOWN_IN_FOREGROUND_WITH_CRASH_LOG_WITH_MEMORY_WARNING,
   FIRST_LAUNCH_AFTER_UPGRADE,
+  SHUTDOWN_IN_FOREGROUND_WITH_MAIN_THREAD_FROZEN,
   MOBILE_SESSION_SHUTDOWN_TYPE_COUNT,
 };
 
@@ -51,6 +52,9 @@ class MobileSessionShutdownMetricsProvider : public metrics::MetricsProvider {
 
   // Whether there was a memory warning shortly before last shutdown.
   virtual bool ReceivedMemoryWarningBeforeLastShutdown();
+
+  // Whether the main thread was frozen on previous session termination.
+  virtual bool LastSessionEndedFrozen();
 
  private:
   metrics::MetricsService* metrics_service_;
